tests/fixtures/valid/unary_ops.vt
fn negation(x: i32): i32 {
    return -x;
}
