tests/fixtures/invalid/undefined_function.vt
fn test(): i32 {
    return nonexistent(10);
}
